# toykio

./: .onedev-buildspec.yml  Cargo.toml  LICENSE.txt  README.md  toolchain.Dockerfile
certs/ca/: ca.crt  ca.key
certs/client/: client.crt  client.key
certs/server/: server.crt  server.key
docs/: README.md
src/: cli.rs  client.rs  config.rs  lib.rs  main.rs  net.rs  protocol.rs  server.rs  socks5.rs  test_helpers.rs  tls.rs
src/client/: socks5.rs
src/config/: preconfigured_secrets.rs
src/server/: mod.rs  proxy_manager.rs  server_connection_handler.rs
