[package]
name = "toykio"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.52.3", features = ["full"]}
anyhow = "1.0.103"
thiserror = "2.0.19"
tokio-rustls = "0.26.4"
rustls-post-quantum = "0.2.4"
bytes = "1.12.1"
sha2 = "0.11.0"
subtle = "2.6.1"

tracing = "0.1.11"
tracing-subscriber = {version = "0.3.23", features = ["env-filter"]}
rustls = "0.23.41"
num_enum = "0.7"
clap = { version = "4.6.2", features = ["derive"] }
kcp-tokio = "0.7"
h2 = "0.4.15"
http = "1.4.2"
tokio-util = "0.7.19"

[dev-dependencies]
tokio-test = "0.4.5"

